# qa_guru_python_3_20_appium_browserstack

./: .gitignore  README.md  config.py  conftest.py  pyproject.toml
mobile_tests_appium/utils/: file.py
mobile_tests_appium/utils/allure/: attach.py
mobile_tests_appium/utils/browserstack/: get.py
mobile_tests_appium/utils/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
tests/: conftest.py
tests/android/: test_wikipedia.py
